application small css fix

--- a/css/application_popup.css
+++ b/css/application_popup.css
@@ -27,7 +27,7 @@
 
 .popup {
   margin: 20px auto;
-  padding: 20px;
+  padding: 30px;
   background: #fff;
   border: 1px solid #666;
   width: 600px;
@@ -44,7 +44,7 @@
 
 
 input[type=text], input[type=date], textarea, select {
-  width: 90%;
+  width: 100%;
   padding: 15px;
   margin: 5px 0 15px 0;
   display: inline-block;
@@ -75,7 +75,7 @@ input[type=text], input[type=date], textarea, select {
 
 .cancelbtn, .signupbtn {
   float: left;
-  width: 45%;
+  width: 50%;
 }
 @media screen and (max-width: 800px) {
   .cancelbtn, .signupbtn {
